feat: update load stradegy

--- a/packages/services/i18n/package.json
+++ b/packages/services/i18n/package.json
@@ -30,7 +30,7 @@
     "react": "*",
     "react-i18next": "*",
     "i18next": "*",
-    "@phantomthief-react/utils.definations": "workspace:*"
+    "@phantomthief-react/utils": "workspace:*"
   },
   "author": "@DinhThienPhuc",
   "license": "ISC",
